# sentinel-netlab

./: .dos_state.json  .env.example  .flake8  .gitignore  .gitleaks.toml  .lycheeignore  .pre-commit-config.yaml  .secrets.baseline  .sentinel_tui_profiles.json  404.html  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INTEGRITY_REPORT.md  AUDIT_MISMATCH_REPORT.md  BAO_CAO_DANH_GIA.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LAB_AUTH_TEMPLATE  LICENSE  Makefile  QnA_BaoVeDoAn_SentinelNetLab.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  algos_update_Lav_report.md  audit_demo.json  bandit.yaml  bandit_report.json  bluetooth_log.json  config.example.yaml  config.yaml  coverage.xml  debug_controller.py  debug_dash.txt  debug_dash_2.txt  debug_dashboard.py  debug_import.py  file_list.txt  (+38 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.jules/: bolt.md
algos/: README.md  __ini  __init__.py  baseline.py  beacon_flood_detector.py  detection.py  disassoc_detector.py  dos.py  evil_twin.py  exploit_chain_analyzer.py  features.py  jamming_detector.py  karma_detector.py  krack_detector.py  pmkid_detector.py  risk.py  wardrive_detector.py  wep_iv_detector.py
artifacts/: .gitkeep  audit_report.json
benchmarks/: benchmark_suite.py  compare_recall.py  load_test.py  test_latency.py  test_stability.py
common/: __init__.py  contracts.py  features.py  frame_constants.py  logging.py  metrics.py  oui.py  privacy.py  profile.py  recommendations.py  risk_engine.py  ttl_dict.py
controller/: alembic.ini  api_server.py  celery_app.py  config.example.json  config.py  export_engine.py  gui.py  gunicorn_conf.py  metrics.py  models.py  openapi.yaml  requirements.txt  scanner_gui.py  tasks.py  tasks_retention.py
dashboard/: app.py
data/: README.md
dev_detectors/: index.html
docker/: Dockerfile.alpine  Dockerfile.debian  docker-compose.yml
docs/: IEEE_REPORT.md  IEEE_Sentinel_NetLab_Report.md  INDEX.md  README.md  SYSTEM_DESIGN.md  THREAT_MODEL.md  api-openapi.yaml  api.md  api_ingest.md  api_reference.md  architecture.md  architecture_analysis.md  artifact_checklist.md  audit_guide.md  behavioral_risk_analysis.md  bug_fix_report.md  consent_form.md  data_schema.md  defense_objections.md  defense_script.md  deliverables_checklist.md  demo_runbook.md  deployment.md  deployment_checklist.md  dev_detectors.md  docker_deployment.md  evaluation_rubric.md  hardware_compatibility.md  hardware_requirements.md  install_guide.md  killer_qa.json  lightweight_deployment.md  market_fit_analysis.md  metrics_guide.md  operational_handbook.md  operations.md  os_tuning_guide.md  performance_tuning.md  presentation_slides.md  repo_index.csv  (+14 more)
examples/: benchmark_algos.py  sample_alert_output.json  sample_output.json  sample_risk_assessment.json  sample_telemetry_output.json
lab_attack_service/: Dockerfile  app.py  attacks.py
ml/: __init__.py  anomaly_model.py
notebooks/: README.md  algorithm_evaluation.ipynb
ops/: .env.example  .env.lab.example  .env.prod.example  Dockerfile.controller  Dockerfile.dashboard  Dockerfile.sensor  Dockerfile.sensor.alpine  Dockerfile.sensor.debian  Dockerfile.sensor.mock  README.md  alert_rules.yml  alertmanager.yml  docker-compose.dev.yml  docker-compose.lab.yml  docker-compose.light.yml  docker-compose.prod.yml  docker-compose.sensor.yml  docker-compose.yml  gen_lab_runtime_tokens.py  gen_lab_secrets.py  init-db.sql  init_lab_db.py  prometheus.yml  report.md  seed_lab_data.py  sentinel-sensor.service
reference/: repo_index.csv
research/: ethics.md
scripts/: README.md  calibrate_weights.py  check_driver.py  cleanup_project.py  demo_evil_twin.py  entrypoint.py  entrypoint.sh  generate_openapi.py  install_service.sh  live_evil_twin.py  package_release.sh  rotate_pcap.sh  sentinel-setup.sh  sentinel.py  setup.sh  setup_debian_minimal.sh  setup_helper.ps1  setup_host.ps1  setup_vm.sh  upgrade.sh
search/: search_index.json
sensor/: .env.example  README.md  __init__.py  alert_manager.py  api_server.py  attacks.py  audit.py  baseline.py  bluetooth_sensor.py  buffer_manager.py  capture.py  capture_driver.py  capture_engine.py  capture_queue.py  capture_tshark.py  channel_hopper.py  cli.py  config.py  config.yaml  detection.py  detector_base.py  errors.py  event_aggregator.py  evil_twin_detector.py  features.py  forensics.py  frame_parser.py  geo_mapping.py  gunicorn_conf.py  health.py  label_tool.py  logging_config.py  message_signing.py  models.py  monitor.py  monitoring.py  nginx.conf.example  normalizer.py  one_run_setup.py  packet_handler.py  (+23 more)
sensor/auditor/: __init__.py  engine.py  loader.py  models.py  policies.py  reporter.py
sensor/detection/: __init__.py  adapters.py  analysis_orchestrator.py  interface.py  normalizer.py  orchestrator.py  profiles.py  registry.py
sensor/models/: __init__.py  ml_classifier.py
sensor/replay/: pcap_reader.py
sensor/rules/: audit-home-checklist.json  audit-sme-checklist.json  wids_core.json
sensor/schema/: alert.json  ml_dataset.json  rules.json  telemetry.json  telemetry_batch.json
sensor/templates/: report_template.html
sensor/tests/unit/: test_buffer_manager.py  test_capture_driver.py  test_frame_parser.py
sensor/tests/unit/test_vectors/: evil_twin_sim.json  probe_requests_varied.json
sensor/tui/: __init__.py  __main__.py  app.py  bootstrap.py  config_store.py  setup_wizard.py  state_manager.py  theme.tcss  wardrive_store.py
sensor/utils/: __init__.py  oui_db.py  time_sync.py
tests/: .gitkeep  benchmark_suite.py  compare_recall.py  conftest.py  test_active_features.py  test_async_ingest.py  test_config.py  test_deduplication.py  test_ingest_gzip.py  test_integration_flow.py  test_lab_smoke_script.py  test_latency.py  test_metrics_endpoint.py  test_modules.py  test_observability.py  test_one_run_setup.py  test_privacy_enforcement.py  test_proxy_security.py  test_reporting_xss.py  test_schema_roundtrip.py  test_security_proxy.py  test_security_secrets.py  test_sensor_config_yaml.py  test_sensor_queue.py  test_service_entrypoints.py  test_stability.py  test_tui_app_setup.py  (+11 more)
(+341 files in other folders)
