[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-netlab"
version = "1.0.0"
description = "Lightweight Hybrid Wireless Intrusion Detection System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sentinel Team", email = "anduong1200@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
]


dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",
    # Security: pinned to fix CVE-2026-23949 (path traversal)
    "jaraco-context>=6.1.0",
    # Security: pinned to fix CVE-2026-24049 (privilege escalation)
    "wheel>=0.46.2",
]

[tool.setuptools]
py-modules = ["sentinel"]
include-package-data = true

[tool.setuptools.package-data]
sensor = ["*.yaml", "*.yml", "schema/*.json", "rules/*.json", "templates/*.html"]
controller = ["openapi.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sensor*", "controller*", "common*", "algos*", "ml*", "lab_attack_service*", "dashboard*"]

[project.optional-dependencies]
# Runtime components
controller = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.5.0",
    "sqlalchemy>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "gunicorn>=20.1.0",
    "PyYAML>=6.0",
    "celery>=5.3.0",
]

sensor = [
    "scapy>=2.5.0",
    "psutil>=5.9.0",
    "pynmea2>=1.18.0",
    "pyserial>=3.5",
    "python-dotenv>=1.0.0",
]

dashboard = [
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "dash-auth>=1.3.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "gunicorn>=20.1.0",
]

ml = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Torch excluded by default to keep size down
    # "torch>=2.0.0",
]

# Lab-only / isolated (Option B)
# NOT included in default images/installs
lab = [
    "scapy>=2.5.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

# Tooling
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/anduong1200/sentinel-netlab"
Documentation = "https://github.com/anduong1200/sentinel-netlab/tree/main/docs"
Repository = "https://github.com/anduong1200/sentinel-netlab.git"
Issues = "https://github.com/anduong1200/sentinel-netlab/issues"

[project.scripts]
sentinel-netlab = "sentinel:main"
sentinel-sensor = "sensor.cli:main" # Legacy/Direct
sentinel-wardrive = "sensor.wardrive:main" # Legacy/Direct

# =============================================================================
# TOOL CONFIGURATION
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long
    "S101",  # assert used
    "S603",  # subprocess calls (needed for sensor)
    "S607",  # partial path
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S110", "E722", "E741"]
"sensor/tests/*" = ["S101"]
"sensor/attacks.py" = ["S"]
"sensor/wardrive.py" = ["S311", "S110", "E722"]
"sensor/api_server.py" = ["S311", "S104"]
"sensor/capture_driver.py" = ["S311", "S110"]
"sensor/sensor_controller.py" = ["S311", "S107"]
"sensor/sensor_cli.py" = ["S108", "S104"]
"sensor/capture_tshark.py" = ["S108"]
"tools/*" = ["S311"]
"dashboard/app.py" = ["S104"]
"sentinel.py" = ["S104"]
"common/risk_engine.py" = ["S110"]
"sensor/buffer_manager.py" = ["S110"]
"sensor/capture_engine.py" = ["S110"]
"sensor/frame_parser.py" = ["S110"]
"sensor/parser.py" = ["S110"]
"sensor/usb_watchdog.py" = ["S110"]
"sensor/utils/time_sync.py" = ["S110"]
"controller/api_server.py" = ["B904", "S104", "I001"]
"sensor/audit.py" = ["S105"]
"scripts/check_driver.py" = ["S602"]
"sensor/schema.py" = ["B904"]
"sensor/config.py" = ["S104"]

[tool.ruff.lint.isort]
known-first-party = ["sensor", "controller", "algos"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = ["tests/", "venv/", ".venv/", "ml/", "dashboard/", "build/"]

[[tool.mypy.overrides]]
module = "scapy.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "sensor.wardrive",
    "sensor.parser",
    "sensor.forensics",
    "lab_attack_service.attacks",
    "sensor.sensor_cli",
    "sensor.geo_mapping",
    "sensor.usb_watchdog",
    "sensor.capture_driver",
    "sensor.capture_queue",
    "sensor.config",
    "sensor.rule_engine",
    "audit",
    "sensor.audit",
    "common.utils.oui_db",
    "controller.integrations.siem_connector",
    "controller.export_engine",
    "controller.models",
    "algos.features",
    "algos.risk",
    "algos.evil_twin",
    "tools.generate_annotated_pcap",
    "scripts.calibrate_weights",
    "common.metrics",
    "sensor.storage_buffered",
    "sensor.frame_parser",
    "sensor.label_tool",
    "algos.detection",
    "sensor.capture_tshark",
    "sensor.buffer_manager",
    "controller.config",
    "common.logging",
    "algos.exploit_chain_analyzer",
    "sensor.sensor_controller",
    "controller.api.auth",
    "sensor.errors",
    "sensor.schema",
    "common.schemas.config",
    "sensor.transport",
    "sensor.normalizer",
    "sensor.models.ml_classifier",
    "sensor.cli"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
  "system: system/e2e tests that spawn real services",
]

[tool.coverage.run]
source = ["sensor", "controller", "algos"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B603", "B607"]
